[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
homepage = "https://github.com/hopdb/discord-bot"
license = "ISC"
name = "hopdb-discord-bot"
repository = "https://github.com/hopdb/discord-bot.git"
version = "0.1.0"

[dependencies]
futures = { default-features = false, version = "^0.3.5" }
hop = { default-features = false, git = "https://github.com/hopdb/hop" }
hop-cli = { default-features = false, git = "https://github.com/hopdb/hop", package = "hop-cli-lib" }
twilight = { default-features = false, features = ["gateway", "http", "model"], git = "https://github.com/twilight-rs/twilight" }
tokio = { default-features = true, features = ["rt-core"], version = "^0.2.21" }
